# jstefanellicom

./: Dockerfile  Readme.md
server/: .gitignore  CMakeLists.txt  Readme.md  build.md
server/include/: http_client.h  socket_client.h  utils.h
server/include/cache/: cache_mgr.h  cached_file.h
server/include/http/: http_message.h  http_request.h  http_response.h
server/src/: http_client.cpp  main.cpp  socket_client.cpp  utils.cpp
server/src/cache/: cache_mgr.cpp  cached_file.cpp
server/src/http/: http_message.cpp  http_request.cpp  http_response.cpp
ui/: Readme.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
ui/src/: index.template.html  main.ts  style.css
ui/src/console/: commandParser.ts  console.ts
